# testclone2

./: README.md  pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md
spec/: main.cs.md
src/testclone2/: __init__.py  __main__.py
